2007 June 6:
* Fixed OME upload/download bugs
* Fixed issues with ND2, EPS, Leica LIF, and OIF
* Added support for Khoros XV
* Minor improvements to the importer

2007 May 24:
* Better Slidebook support
* Added support for Quicktime RPZA
* Better Leica LIF metadata parsing
* Added support for BioRad PIC companion files
* Added support for bzip2-compressed files
* Improved ImageJ plugins
* Native support for FITS and PGM

2007 May 2:
* Added support for NRRD
* Added support for Evotec Flex (requires LuraWave Java SDK with license code)
* Added support for gzip-compressed files
* Added support for compressed QuickTime headers
* Fixed QuickTime Motion JPEG-B support
* Fixed some memory issues (repeated small array allocations)
* Fixed issues reading large (> 2 GB) files
* Removed "ignore color table" logic - replaced with Leica-specific solution
* Added status event reporting to readers
* Added API to toggle metadata collection
* Support for multiple dimensions rasterized into channels
* Deprecated reader and writer methods that accept the 'id' parameter
* Deprecated IFormatWriter.save in favor of saveImage and saveBytes
* Moved dimension swapping and min/max calculation logic to delegates
* Separate GUI logic into isolated loci.formats.gui package
* Miscellaneous bugfixes and tweaks in most readers and writers
* Many other bugfixes and improvements

2007 Mar 16:
* Fixed calibration bugs in importer plugin
* Enhanced metadata support for additional formats
* Fixed LSM bug

2007 Mar 7:
* Added support for Micro-Manager file format
* Fixed several bugs -- Leica LIF, Leica LEI, ICS, ND2, and others
* Enhanced metadata support for several formats
* Load series preview thumbnails in the background
* Better implementation of openBytes(String, int, byte[]) for most readers
* Expanded unit testing framework

2007 Feb 28:
* Better series preview thumbnails
* Fixed bugs with multi-channel Leica LEI
* Fixed bugs with "ignore color tables" option in ImageJ plugin

2007 Feb 26: