@@ -1,3 +1,11 @@
+2007 June 18:
+* Fixed issues with ICS, ND2, MicroManager, Leica LEI, and FV1000 OIF
+* Added support for large (> 2 GB) ND2 files
+* Minor enhancements to ImageJ importer
+* Implemented more flexible logging
+* Updated automated testing framework to use TestNG
+* Added package for caching images produced by Bio-Formats
+
 2007 June 6:
 * Fixed OME upload/download bugs
 * Fixed issues with ND2, EPS, Leica LIF, and OIF
